# GP2---AgenticSDLC

./: .env.example  .gitignore  README.md  package-lock 2.json  package-lock.json  package.json  turbo.json
.github/workflows/: ci.yml  deploy.yml
apps/api/: .env.example  README.md  package.json  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/config/: __init__.py  constants.py  settings.py
apps/api/app/models/: agents.py  project.py
apps/api/app/routers/: __init__.py  agents.py  health.py  projects.py  users.py
apps/api/app/services/agents/: __init__.py  base.py  design_agent.py  developer_agent.py  document_agent.py  requirement_agent.py  tester_agent.py
apps/api/app/services/agents/prompts/: design_prompts.py  developer_prompts.py  document_prompts.py  requirement_prompts.py  tester_prompts.py
apps/api/app/services/database/: Untitled  mongodb.py
apps/api/app/services/llm/: __init__.py  base.py  factory.py  gemini_client.py  openai_client.py
apps/api/app/services/orchestrator/: edges.py  graph.py  nodes.py  runner.py  state.py
apps/web/: package.json
apps/web/.next/: trace
apps/web/.next/server/: _error.js  server-reference-manifest.json  webpack-runtime.js
apps/web/.next/server/app/: page.js  page_client-reference-manifest.js
apps/web/.next/server/pages/: _error.js
apps/web/src/: middleware.ts
apps/web/src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx
apps/web/src/hooks/: useChat.ts
apps/web/src/types/: chat.ts
docker/: Dockerfile.api  Dockerfile.web  docker-compose.yml
(+53 files in other folders)
